package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"

	"github.com/aws/aws-sdk-go-v2/config"
	"github.com/aws/aws-sdk-go-v2/service/dynamodb"
	"github.com/aws/aws-sdk-go-v2/service/s3"
	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"
)

type server struct {
	dynamoClient *dynamodb.Client
	s3Client     *s3.Client
}

func main() {
	// Load AWS configuration
	cfg, err := config.LoadDefaultConfig(context.TODO())
	if err != nil {
		log.Fatalf("unable to load SDK config: %v", err)
	}

	// Create AWS clients
	dynamoClient := dynamodb.NewFromConfig(cfg)
	s3Client := s3.NewFromConfig(cfg)

	// Create gRPC server
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", 50051))
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	s := grpc.NewServer()
	reflection.Register(s)

	// Register service
	RegisterChatServiceServer(s, &server{
		dynamoClient: dynamoClient,
		s3Client:     s3Client,
	})

	log.Printf("Server listening at %v", lis.Addr())
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}

// Implement ChatServiceServer interface
func (s *server) SendMessage(ctx context.Context, req *SendMessageRequest) (*SendMessageResponse, error) {
	// TODO: Implement message sending logic
	return &SendMessageResponse{Success: true}, nil
}

func (s *server) GetMessages(ctx context.Context, req *GetMessagesRequest) (*GetMessagesResponse, error) {
	// TODO: Implement message retrieval logic
	return &GetMessagesResponse{Messages: []*Message{}}, nil
}

func (s *server) MarkMessageAsRead(ctx context.Context, req *MarkMessageAsReadRequest) (*MarkMessageAsReadResponse, error) {
	// TODO: Implement read receipt logic
	return &MarkMessageAsReadResponse{Success: true}, nil
}

func (s *server) GetMessageStream(req *GetMessageStreamRequest, stream ChatService_GetMessageStreamServer) error {
	// TODO: Implement message streaming logic
	return nil
} 